# ttt_semver

./: .gitignore  .releaserc.json  .releaserc.yml  CHANGELOG.md  README.md  ____.releaserc.yml  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: release.yml
subs_qa_automation/: __init__.py  conftest.py  pytest.ini
subs_qa_automation/tests/: __init__.py
