[tool.poetry]
name = "qa-automation"
version = "1.10.11"
repository = "https://github.com/gridivit/ttt_semver"
description = ""
authors = ["Vitaliy Gridin"]
readme = "README.md"
packages = [{include = "subs_qa_automation"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
allure-pytest = "^2.13.1"
pytest-xdist = "^3.2.1"
pytest-timeout = "^2.0.2"
dpath = "^2.1.5"
pyhamcrest = "^2.0.4"
curlify = "^2.2.1"
faker = "^18.5.1"

requests = "^2.28.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
